@@ -62,11 +62,15 @@ typedef struct {
 	struct TAG_ntdef *tag_ARRAYSUB;
 
 	struct TAG_ntdef *tag_VARDECL;
+	struct TAG_ntdef *tag_ABBREV;
+	struct TAG_ntdef *tag_VALABBREV;
 	struct TAG_ntdef *tag_PROCDECL;
 	struct TAG_ntdef *tag_TYPEDECL;
 	struct TAG_ntdef *tag_FIELDDECL;
 
 	struct TAG_ntdef *tag_FPARAM;
+	struct TAG_ntdef *tag_VALFPARAM;
+
 	struct TAG_ntdef *tag_SKIP;
 	struct TAG_ntdef *tag_STOP;
 	struct TAG_ntdef *tag_SEQ;
@@ -96,9 +100,12 @@ typedef struct {
 
 	struct TAG_ntdef *tag_NDECL;
 	struct TAG_ntdef *tag_NPARAM;
+	struct TAG_ntdef *tag_NVALPARAM;
 	struct TAG_ntdef *tag_NPROCDEF;
 	struct TAG_ntdef *tag_NTYPEDECL;
 	struct TAG_ntdef *tag_NFIELD;
+	struct TAG_ntdef *tag_NABBR;
+	struct TAG_ntdef *tag_NVALABBR;
 
 	struct TAG_ntdef *tag_PINSTANCE;
 	struct TAG_ntdef *tag_FINSTANCE;
