@@ -26,6 +26,8 @@ struct TAG_ntdef;
 extern struct TAG_tnode *treeops_findintree (struct TAG_tnode *tree, struct TAG_ntdef *tag);
 extern struct TAG_tnode *treeops_findtwointree (struct TAG_tnode *tree, struct TAG_ntdef *tag1, struct TAG_ntdef *tag2);
 
+extern struct TAG_tnode *treeops_transform (struct TAG_tnode *tree, ...);
+
 extern int treeops_init (void);
 extern int treeops_shutdown (void);
 
