@@ -190,6 +190,7 @@ int map_mapnames (tnode_t **tptr, target_t *target)
 	mdata->thisberesult = NULL;
 	mdata->mapchook = tnode_lookupornewchook ("map:mapnames");
 	mdata->mapchook->chook_dumptree = map_namemap_chook_dumptree;
+	mdata->allocevhook = tnode_lookupornewchook ("alloc:extravars");
 
 	/* do pre-mapping then real mapping */
 	tnode_modprewalktree (tptr, map_modprewalk_premap, (void *)mdata);
