@@ -1,4 +1,6 @@
 
+24/09/2005	frmb	some work on abbreviations and value parameters
+24/09/2005	frmb	first round of support for INITIAL declarations
 18/09/2005	frmb	more work on the usage-checker
 18/09/2005	frmb	various minor updates
 17/09/2005	frmb	initial support for monadic operators (just "-" and "~" so far)
